fix: Better headings view on smaller devices

--- a/apps/website/app/tailwind.css
+++ b/apps/website/app/tailwind.css
@@ -15,11 +15,11 @@ body {
 
 @layer base {
 	h1 {
-		@apply text-4xl font-bold text-black dark:text-white mb-6;
+		@apply text-2xl sm:text-3xl lg:text-4xl font-bold text-black dark:text-white mb-6 break-words hyphens-auto;
 	}
 
 	h2 {
-		@apply text-2xl font-semibold text-black dark:text-white mt-4 mb-4;
+		@apply text-xl sm:text-2xl font-semibold text-black dark:text-white mt-4 mb-4 break-words;
 	}
 
 	code {
